--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,23 @@
 <html>
 <head>
   <title>Audio Player</title>
+  <link href="css/stlye.css" rel="stylesheet">
 </head>
 <body ng-app="andioPlayer" ng-controller="andioPlayerCtrl">
-  <div>
-    <audio src="music/Avicii%20-%20Waiting%20For%20Love.mp3" controls></audio>
-  </div>
+  <div ng-class="{hidden: playList.length < 1}">
+    <div>
+      <audio src="" controls id="audio"></audio>
+    </div>
 
-  <div ng-repeat="music in playList">
-    {{music}}
+    <div ng-repeat="music in playList">
+      <div ng-click="changeAudioSource($index, music)" ng-class="{playing: $index === index && audioContainer.paused !== true }">
+        {{music.replace('.mp3', '')}}
+      </div>
+      <span ng-if="audioContainer.paused === true" ng-click="delMusic($index)">del</span>
+    </div>
+  </div>
+  <div ng-if="noAudioFound === true">
+    No Audio found! Please upload some via the Upload menu.
   </div>
 
   <script src="lib/angular.min.js"></script>
